Updated mqs_trigger_WODU01P1.config by adding ATLCIS10 for AU11 and updating CISATL11 to use .2 for Food/NZ Updated mqs_trigger_WODU03T1.config by addint ATLCIS10 for AU11

--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/PRODUCTION/mqs_trigger_WODU01P1.config
@@ -27,6 +27,8 @@
 # 2.7     Trevor Keon        2008-Jul-18 Added NZ16 interfaces
 # 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
 # 2.9     Trevor Keon        2009-Jan-15 Added ATLCIS09 & CISATL05 for AU41/42-FG
+# 2.9.1   Trevor Keon        2009-Aug-10 Updated CISATL11 to use .2 for Food/NZ
+# 2.9.2   Trevor Keon        2009-Aug-19 Added ATLCIS10 for AU11
 # 
 #-------------------------------------------------------------------------------
 #
@@ -110,9 +112,9 @@ QL.KF1ICS02 = ics_passthru_mq.sh QL.KF1ICS02 CISATL13
 QL.KF1ICS04 = ics_passthru_mq.sh QL.KF1ICS04 CISATL05
 QL.KF1ICS05 = ics_passthru_mq.sh QL.KF1ICS05 CISATL02
 
-# Production Planning / Scheduling
+# Production Planning / Scheduling (Food/NZ)
 QL.CISATL15 = ics_passthru_mq.sh QL.CISATL15 CISATL15.1
-QL.CISATL11 = ics_passthru_mq.sh QL.CISATL11 CISATL11
+QL.CISATL11 = ics_passthru_mq.sh QL.CISATL11 CISATL11.2
 QL.PPSCIS01 = ics_inbound_mq.sh QL.PPSCIS01 PPSCIS01
 
 # NZ Maxwells Warehouse Configurations
@@ -333,6 +335,7 @@ QL.OUT.ATLCIS09.4 = ics_inbound_dj.sh QL.OUT.ATLCIS09.4 ATLCIS09 ATLCIS09.4 *NON
 
 # Tolas Food Wyong (Linfox) (AU11)
 QL.OUT.ATLCIS09.5 = ics_inbound_dj.sh QL.OUT.ATLCIS09.5 ATLCIS09 ATLCIS09.5 *NONE "-count 200"
+QL.OUT.ATLCIS10.1 = ics_passthru_dj.sh QL.OUT.ATLCIS10.1 ATLCIS10 ATLCIS10.1 "-count 50"
 
 # Tolas Snack to BW Interfaces
 QL.TOLBPP01 = ics_passthru_mq.sh QL.TOLBPP01 TOLBPP01
