--- a/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
+++ b/SOURCE/LICS/BESPOKE/MFANZ/UNIX/TEST/mqs_trigger_WODU03T1.config
@@ -27,6 +27,7 @@
 # 2.8     Trevor Keon        2008-Oct-02 Removed Exel WH interfaces
 # 2.9     Trevor Keon        2008-Nov-12 Added ATLCIS09 for AU41/42-FG
 # 2.9.1   Trevor Keon        2008-Nov-21 Added CISATL05 for AU41/42-FG
+# 2.9.2   Trevor Keon        2009-Aug-13 Added ATLCIS10 for AU11
 #-------------------------------------------------------------------------------
 
 # {Source Queue} {Script} {Queue} {Interface ID} {Interface ID} {FWD Q} {DJ STOP}
@@ -441,3 +442,4 @@ QL.TOLBPP02.TEST = ics_passthru_mq.sh QL.TOLBPP02.TEST TOLBPP02
 
 # Tolas Food Wyong (Linfox) (AU11)
 QL.OUT.ATLCIS09.5 = ics_inbound_dj.sh QL.OUT.ATLCIS09.5 ATLCIS09 ATLCIS09.5 *NONE "-count 50" *NO
+QL.OUT.ATLCIS10.1 = ics_passthru_dj.sh QL.OUT.ATLCIS10.1 ATLCIS10 ATLCIS10.1 "-count 50"
