Fixed AMI_TIER variable

--- a/SOURCE/LICS/BESPOKE/PTS/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/LICS/BESPOKE/PTS/UNIX/PRODUCTION/ics_loader.config
@@ -27,7 +27,7 @@ BIN_PATH        /ics/pts/prod/bin
 LOGFILE         /ics/pts/prod/log/ics_integration.log
 
 SERVER          WODU002.AP.MARS
-AMI_TIER        WODU02P1
+AMI_TIER        prod
 SYS_TIER        prod
 ENV_VAR         /usr/local/bin/ami_settier 
 DATABASE        WOD050
