--- a/SOURCE/PDB/BESPOKE/BTH/UNIX/PRODUCTION/ics_loader.config
+++ b/SOURCE/PDB/BESPOKE/BTH/UNIX/PRODUCTION/ics_loader.config
@@ -26,7 +26,7 @@ BIN_PATH         /ics/prod/bin
 LOGFILE          /ics/prod/log/ics_integration.log
 
 SERVER           BTHLX001.AP.MARS
-AMI_TIER         prod
+AMI_TIER         APQM005P
 SYS_TIER         prod
 ENV_VAR          /usr/local/bin/ami_settier
 DATABASE         BTH001
