--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Properties/Settings.settings
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="AppName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Flat File Loader Utility</Value>
+      <Value Profile="(Default)">File Loader Utility</Value>
     </Setting>
     <Setting Name="SmtpHost" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
