* SSL now optional (user switching functionality not available when SSL not used)

--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Web.config
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Web.config
@@ -130,6 +130,9 @@
       <setting name="SegmentBytes" serializeAs="String">
         <value>512000</value>
       </setting>
+      <setting name="UseSsl" serializeAs="String">
+        <value>False</value>
+      </setting>
     </FlatFileLoaderUtility.Properties.Settings>
   </applicationSettings>
 </configuration>
