--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Properties/Settings.settings
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="SegmentBytes" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">512000</Value>
     </Setting>
+    <Setting Name="UseSsl" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
