* Bugfix: CSS3PIE (so, IE8) progress indicator

--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Web.config
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Web.config
@@ -106,19 +106,19 @@
         <value>File Loader Utility</value>
       </setting>
       <setting name="SmtpHost" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="SmtpUsername" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="SmtpPassword" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="MailTo" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="MailCC" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="LdapServer" serializeAs="String">
         <value>woddc101.mars-ad.net</value>
@@ -127,7 +127,7 @@
         <value>True</value>
       </setting>
       <setting name="IsDev" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="DatabasePackageName" serializeAs="String">
         <value>FFLU_API</value>
