--- a/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Web.config
+++ b/SOURCE/FFLU/BASE/MICROSOFT/FlatFileLoaderUtility/FlatFileLoaderUtility/Web.config
@@ -141,6 +141,21 @@
       <setting name="UseSsl" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="MinCompressionBytes" serializeAs="String">
+        <value>5000</value>
+      </setting>
+      <setting name="MaxCompressedSegmentsPerRequest" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="MaxCompressionBytes" serializeAs="String">
+        <value>2048000</value>
+      </setting>
+      <setting name="StartCompressionBytes" serializeAs="String">
+        <value>512000</value>
+      </setting>
+      <setting name="CompressionStep" serializeAs="String">
+        <value>256000</value>
+      </setting>
     </FlatFileLoaderUtility.Properties.Settings>
   </applicationSettings>
 </configuration>
