--- a/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Web.config
+++ b/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Web.config
@@ -112,7 +112,11 @@
   <applicationSettings>
     <PlantWebService.TestSite.Properties.Settings>
       <setting name="ServiceURL" serializeAs="String">
-        <value>http://test.webservice.fidb.ap.mars/FactoryService.svc</value>
+        <value>http://localhost:52818/FactoryService.svc</value>
+      </setting>
+      <setting name="PlantWebService_TestSite_mars_ap_fidb_webservice_test_FactoryService"
+        serializeAs="String">
+        <value>http://localhost:52818/FactoryService.svc</value>
       </setting>
     </PlantWebService.TestSite.Properties.Settings>
   </applicationSettings>
