--- a/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Properties/Settings.settings
+++ b/SOURCE/FIDB/Webservice/PlantWebService.TestSite/Properties/Settings.settings
@@ -3,10 +3,10 @@
   <Profiles />
   <Settings>
     <Setting Name="ServiceURL" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://test.webservice.fidb.ap.mars/FactoryService.svc</Value>
+      <Value Profile="(Default)">http://localhost:52818/FactoryService.svc</Value>
     </Setting>
     <Setting Name="PlantWebService_TestSite_mars_ap_fidb_webservice_test_FactoryService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">http://test.webservice.fidb.ap.mars/FactoryService.svc</Value>
+      <Value Profile="(Default)">http://localhost:52818/FactoryService.svc</Value>
     </Setting>
   </Settings>
 </SettingsFile>
